--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-01 11:38:19
+lastsearch = 2024-08-01 18:49:47
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
@@ -405,4 +405,9 @@ url = https://moc.gov.vn/en/_layouts/15/NCS.Webpart.MOC/mt_poup/Intrangweb.aspx?
 match = -233.3%%
 title = Công bố Quyết định phê duyệt Quy hoạch chi tiết xây dựng ...
 url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
+
+[fujimart.vn]
+match = 0.0%%
+title = Địa chỉ các chi nhánh
+url = https://fujimart.vn/dia-chi-cac-chi-nhanh/
 
