--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-01 16:42:07
+lastsearch = 2024-08-01 18:57:35
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -43.8%%
-title = Chiếu lác màu xuất khẩu bao dày đẹp
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -237.5%%
-title = Hà Nội Riviu - Riviu.vn | | Mùa thu Hà Nội là phải có được ...
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1469374767059588/
+match = -231.2%%
+title = Tay vợt Lê Đức Phát đã từng khiến đối thủ phải chịu trận sau ...
+url = https://m.facebook.com/blvbiencuong/videos/tay-vợt-lê-đức-phát-đã-từng-khiến-đối-thủ-phải-chịu-trận-sau-hai-sét-tại-sea-gam/1622451491633287/
 
 [dangcongsan.vn]
 match = -231.2%%
