--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-01 16:52:23
+lastsearch = 2024-08-01 18:46:17
 
 [demxanh.com]
 match = -9.1%%
@@ -62,9 +62,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [vongxepsaigon.vn]
-match = 3.0%%
-title = Chiếu trúc chiếu tre 1m6 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m6-hat-nau-den-hang-tot-loai-1-2/
+match = -30.3%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Chiếu Trúc Lan Lan Không Viền Màu Đen
 url = https://khonemthangloi.com/san-pham/chieu-truc-lan-lan-khong-vien-mau-den/
 
 [www.toangiaphuc.vn]
-match = 25.0%%
-title = Chiếu trúc hạt vàng 0.8m
-url = https://www.toangiaphuc.vn/chieu-truc-hat-vang-08m.html
+match = 54.8%%
+title = Chiếu trúc hạt nâu viền vải 1m8
+url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m8.html
 
 [ru9.vn]
 match = -18.2%%
