--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-01 17:22:49
+lastsearch = 2024-08-01 18:52:36
 
 [xoptraisan.info]
 match = -64.7%%
@@ -187,7 +187,7 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -129.4%%
-title = THẢM XỐP TRẢI SÀN - Xốp nỉ ghép kẻ Tường Lâm bịch ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-nỉ-ghép-kẻ-tường-lâm-bịch-16-tấm-mỗi-tấm-kích-thước-50-x-50cm-kho/724212907684220/
+match = -158.8%%
+title = THẢM XỐP TRẢI SÀN - Thảm xốp nỉ kẻ Âu Lạc bịch 10 tấm ...
+url = https://m.facebook.com/xoplotsan/photos/thảm-xốp-nỉ-kẻ-âu-lạc-bịch-10-tấm-mỗi-tấm-kích-thước-60-x-60cm-khoản/724213377684173/
 
