--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-01 17:23:33
+lastsearch = 2024-08-01 18:58:19
 
 [gobearcats.com]
 match = -142.1%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -121.1%%
-title = Confederate States Stamps Cover #7 single use June
-url = https://evstamps.hibid.com/lot/187490391
+match = -152.6%%
+title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
+url = https://evstamps.hibid.com/lot/187490381
 
 [ltg.gov.vi]
 match = -168.4%%
