--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-01 22:17:17
+lastsearch = 2024-08-01 23:19:38
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chan-ga-goi-mau.html
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOoqMjBbi0dEoGxAwCBEUWsK4Ifm8v_NiTcftjI8Z-l2Hsb0Nlqu9
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOoppGdl-cxk81ozZO7Ci6t80n20O3oxlDvMBvrsnpm8pT9gmRzJN
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
 match = -28.6%%
