--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-01 22:27:29
+lastsearch = 2024-08-01 23:22:04
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -68.8%%
-title = Văn bản 14 giới Tiếp Hiện tân tu
-url = https://langmai.org/cong-tam-quan/dong-tu-tiep-hien/gioi-ban-tiep-hien-tan-tu/
+match = -18.8%%
+title = Tụng 14 Giới Tiếp Hiện
+url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
 
 [phaata.com]
 match = -118.8%%
@@ -209,7 +209,7 @@ url = https://vaas.vn/vi/giong/giong-lac-l14
 [www.vinaseed.com.vn]
 match = -56.2%%
 title = Hướng dẫn gieo trồng giống lạc L14
-url = https://www.vinaseed.com.vn/vi/news/m25/huong-dan-gieo-trong-giong-lac-l14-150.htm
+url = https://www.vinaseed.com.vn/vi/news/m35/huong-dan-gieo-trong-giong-lac-l14-150.htm
 
 [www.chieuduong.vn]
 match = -87.5%%
