--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-01 20:55:00
+lastsearch = 2024-08-01 23:23:06
 
 [everon.vip]
 match = -10.0%%
@@ -14,7 +14,7 @@ url = https://everon.vip/nem
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoq9ZCb9YK2UvGKaFs9l2iuBZkBH_YvOJNhphrsX5neUl-fPeDyu
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.sieuthinem.vn]
 match = -95.2%%
