--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-01 21:21:04
+lastsearch = 2024-08-01 23:23:27
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,14 +17,14 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -150.0%%
-title = Trần Thu Trang | NEM KEM BƠ HẢI SẢN Rán nóng chiếc ...
-url = https://www.instagram.com/p/Cu9Gu5Avy4N/
+match = -116.7%%
+title = LU EATING | MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA ...
+url = https://www.instagram.com/p/CltHti5L66x/
 
 [www.facebook.com]
-match = 22.2%%
-title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
-url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
 match = -177.8%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopyejCUaSiv29JDQ4aqjEsGnHQL6LOk8SFP5X5m-zomUynk687c
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
