--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-01 20:50:50
+lastsearch = 2024-08-02 00:00:29
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+match = -144.4%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -77.8%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOoo9tCBOMbP-MBlwW3uWgaPo6st8TIk7OrJw_MRnXIkWgvIp8RlQ
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
 
 [everonvn.com.vn]
-match = -155.6%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Esm-20011 ...
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011?srsltid=AfmBOooqHGrL-tU3sMCcqT3arshsfIlngsus2b-vZKYStqWrQ0pLbYFw
+match = 27.8%%
+title = Bộ Everon Esm-20011
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = 27.8%%
 title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html?srsltid=AfmBOooXNDIYKYi0JxA-FO8qyBzblPgyAjoEeaiWNTDm359aASte2ZX_
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 6.7%%
