--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-01 16:56:26
+lastsearch = 2024-08-01 23:45:16
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -131.2%%
-title = LỄ BỐC THĂM CHIA CẶP VÒNG TUYỂN CHỌN AIMAG ...
-url = https://m.facebook.com/caothuLQM/photos/-1800-hôm-nay-lễ-bốc-thăm-chia-cặp-vòng-tuyển-chọn-aimag-2021-bộ-môn-liên-quân-m/1022314476231200/
+match = -168.8%%
+title = ️Giới thiệu cho mấy anh em quán quà chiều ngon nhất ...
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1469398273723904/
 
 [baomoi.com]
 match = -193.8%%
@@ -670,4 +670,14 @@ url = http://hunglien.net/san-pham/chieu-lac/
 match = -27.3%%
 title = Saigon Heat
 url = https://vba.vn/clubs/saigon-heat
+
+[hanoionline.vn]
+match = -6.2%%
+title = Đi lạc thì đi lại thôi
+url = https://hanoionline.vn/di-lac-thi-di-lai-thoi-255481.htm
+
+[baolamdong.vn]
+match = -218.8%%
+title = Cát Tiên: Quyết liệt triển khai các biện pháp phòng, chống ...
+url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bien-phap-phong-chong-benh-sot-xuat-huyet-e201d52/
 
