--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-01 20:19:07
+lastsearch = 2024-08-01 23:50:24
 
 [www.lazada.vn]
 match = -61.1%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=guu4UvG6cKY
 [www.instagram.com]
 match = -138.9%%
 title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
-url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
+url = https://www.instagram.com/p/Bb9uTnaBRoV/
 
 [vietnamnet.vn]
 match = -144.4%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -172.2%%
-title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
-url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
+match = -155.6%%
+title = Nem nướng Ninh Hoà Dì Út #AnCungTikTok #couplecomedy ...
+url = https://www.tiktok.com/@khalinh.ne/video/7357680006492851474
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -77.8%%
-title = NEM Fashion - NEM Fashion added a new photo.
-url = https://m.facebook.com/100064581196454/photos/751618483667518/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
