--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-01 23:00:57
+lastsearch = 2024-08-01 23:57:56
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoo2jFCxZdk2zO7X-lrmsTewUI2y-HNmMuTUcqzuEVGRVcwq51F3
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [flexhouse.vn]
 match = -90.9%%
