--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-01 21:46:52
+lastsearch = 2024-08-02 00:00:08
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -68.2%%
