--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-01 21:46:11
+lastsearch = 2024-08-01 23:47:21
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoopuj_p2eOawzHC5h32kx0HmzojS-SD587JQzaSDxXpTMBADzLT
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
 match = -78.3%%
 title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html?srsltid=AfmBOop5mKwcjg4PLdXdvH_YTkus7WlHH9JaIFJfjr2qhodo4kYzO9Ll
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
 match = -47.8%%
