--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-02 00:37:15
+lastsearch = 2024-08-02 00:44:57
 
 [shopee.vn]
 match = -25.9%%
@@ -23,8 +23,8 @@ url = https://tiki.vn/search?q=chăn lông 4 kg
 
 [h5.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -124,7 +124,7 @@ url = https://stockbiz.vn/tin-tuc/shark-do-lien-nuoc-den-tan-cung-la-thac-do-ngu
 [www.facebook.com]
 match = -33.3%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
 
 [tamanhhospital.vn]
 match = -66.7%%
