--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-01 22:32:32
+lastsearch = 2024-08-02 00:55:55
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -276.9%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = -11.1%%
-title = Fiona Sit
-url = https://en.wikipedia.org/wiki/Fiona_Sit
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Dior
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -338.5%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
+match = -246.2%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
