--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-01 20:19:29
+lastsearch = 2024-08-02 00:51:45
 
 [shopee.vn]
 match = -73.9%%
@@ -42,9 +42,9 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [www.yellowpages.vn]
-match = 15.8%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 60.9%%
+title = chiếu nhựa ở tại thái bình
+url = https://www.yellowpages.vn/class/490435/chiếu-nhựa-ở_thái-bình.html
 
 [websosanh.vn]
 match = -73.9%%
