--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-01 23:42:18
+lastsearch = 2024-08-02 00:48:02
 
 [everonvn.com.vn]
 match = 4.8%%
 title = Bộ Everon Es1804 - Esmeranda
-url = https://everonvn.com.vn/everon/606/bo-everon-es1804
+url = https://everonvn.com.vn/everon/606/bo-everon-es1804?srsltid=AfmBOoqx9JpEgZ4hBU8E9sbumo9ODzzAQj-EuTMWQLCinKgrtkNV90jf
 
 [everonhanoi.vn]
 match = -23.8%%
