--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-01 23:57:56
+lastsearch = 2024-08-02 00:54:33
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html?srsltid=AfmBOorfFWoQdHKowh19FWli792_yB5N6saFbHfBYPSBmJZ1nbUj-9Uo
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Thảm ghế thảm giường - Trang 7
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
 match = 22.2%%
@@ -27,8 +27,8 @@ title = Ga chống thấm Olympia cotton cao cấp mới
 url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+match = 40.9%%
+title = Thảm giường nỉ 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOoqFPDo5ISZNdAHpSJaY7xc4hfC2ge5heeC89N3pU4C0rxcBQgrw
 
 [www.lazada.vn]
 match = -77.3%%
